SOS-1014 Fix spacing of columns in Doc View Table

--- a/themes/so-theme/docroot/_diffs/css/so-skin-ce.css
+++ b/themes/so-theme/docroot/_diffs/css/so-skin-ce.css
@@ -1374,10 +1374,19 @@ input[type=button], input[type=reset], input[type=submit], .aui-state-hover, .co
 	}
 
 	.lfr-header-row {
+		background: #EEE;
 		min-height: 33px;
 	}
 
-	.lfr-app-column-view, .lfr-app-column-view .results-row td, .portlet-msg, .portlet-msg-alert, .portlet-msg-error, .portlet-msg-info, .portlet-msg-success, .search-button-container, .search-button-container .aui-column:before, .search-button-container .aui-column-content, .search-button-container .aui-column-content-center {
+	.lfr-header-row, .document-info {
+		border-bottom: 1px solid $gray-dark;
+	}
+
+	.document-library-breadcrumb {
+		border-top: 1px solid #AAA;
+	}
+
+	.lfr-app-column-view, .lfr-app-column-view .results-row td, .lfr-document-library-comments.lfr-panel.lfr-extended, .portlet-msg, .portlet-msg-alert, .portlet-msg-error, .portlet-msg-info, .portlet-msg-success, .search-button-container, .search-button-container .aui-column:before, .search-button-container .aui-column-content, .search-button-container .aui-column-content-center {
 		border-width: 0;
 	}
 
@@ -1417,18 +1426,22 @@ input[type=button], input[type=reset], input[type=submit], .aui-state-hover, .co
 		width: 30%;
 	}
 
-	.lfr-header-row {
-		background: #EEE;
-		border-bottom: 1px solid #AAA;
-	}
-
 	.lfr-header-row-content .parent-folder-title, .portlet-document-library-display .lfr-header-row-content .parent-folder-title {
 		color: $button-text-color;
 		text-shadow: none;
 	}
 
+	.asset-details:before {
+		border-right: 1px solid $gray-dark;
+		bottom: 0;
+		content: "";
+		position: absolute;
+		top: 0;
+	}
+
 	.context-pane .context-pane-content, .portlet-document-library-display .context-pane .context-pane-content {
 		border-left-width: 0;
+		margin-right: -1px;
 	}
 
 	.header-title {
@@ -1453,6 +1466,27 @@ input[type=button], input[type=reset], input[type=submit], .aui-state-hover, .co
 	.aui-fieldset-content, .lfr-dynamic-uploader {
 		padding: 10px;
 	}
+
+	.document-container {
+		overflow: hidden;
+
+		.aui-searchcontainer-content {
+			border-width: 0;
+			margin: 0 -1px;
+		}
+
+		table .lfr-actions {
+			.lfr-trigger strong {
+				min-width: 0;
+				width: auto;
+			}
+
+			&.show-arrow.direction-down .lfr-trigger strong a {
+				background-position: 100% -3px;
+				padding: 2px 10px;
+			}
+		}
+	}
 }
 
 .portlet-document-library, .portlet-document-library-display {
@@ -1466,6 +1500,10 @@ input[type=button], input[type=reset], input[type=submit], .aui-state-hover, .co
 
 	.taglib-ratings.stars .aui-rating-content, .taglib-ratings.stars .liferay-rating-score {
 		min-width: 200px;
+	}
+
+	.document-container table.taglib-search-iterator {
+		table-layout: auto;
 	}
 
 	.version-history .results-grid .lfr-actions .lfr-trigger strong {
